fixed some stlying and spacing issues

--- a/ui/client-react/src/components/builder/builderMenus/fieldProperties.scss
+++ b/ui/client-react/src/components/builder/builderMenus/fieldProperties.scss
@@ -39,9 +39,6 @@
     }
 
     .checkboxPropertyContainer {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
         padding-top: 20px;
 
         .checkboxPropertyTitle {
